[project]
name = "websockets-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "python-decouple>=3.8",
    "asyncio-redis>=0.16.0",
    "redis>=5.2.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]
